--- a/DESAFIO_LOGICA_Extra-Gabriel-Amaral.html
+++ b/DESAFIO_LOGICA_Extra-Gabriel-Amaral.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
         <div class="fundo"></div>
-        <img class="logo" src="midia/ford-logo-6.png" alt="Logo da Ford azul">
+        <img class="logo" src="ford-logo-6.png" alt="Logo da Ford azul">
         <div class="content"></div>
         <div class="response">
             <div class="textos_da_Resposta">
